added function to join query, need to save results and create __main__ module

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -225,7 +225,7 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 125
+     "prompt_number": 174
     },
     {
      "cell_type": "heading",
@@ -288,7 +288,7 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 9
+     "prompt_number": 175
     },
     {
      "cell_type": "heading",
@@ -351,7 +351,7 @@
       "}"
      ],
      "language": "python",
-     "prompt_number": 68
+     "prompt_number": 176
     },
     {
      "cell_type": "heading",
@@ -372,11 +372,11 @@
       "############################\n",
       "\n",
       "# separate wildcards from args\n",
-      "def find_wildcards(x):\n",
+      "def find_wildcards(user_arg):\n",
       "    user_args = []\n",
       "    wildcards = []\n",
       "    #seperate user args by comma\n",
-      "    arg_list = x.replace(\"'\", \"\").split(',')\n",
+      "    arg_list = user_arg.replace(\"'\", \"\").split(',')\n",
       "    for arg in arg_list:\n",
       "        if arg.endswith('%'):\n",
       "            wildcards.append(arg)\n",
@@ -388,31 +388,25 @@
       "def process_args(arg_list, wild_list, name_arg, arg_db):\n",
       "    # if there is only one user arg\n",
       "    if (len(arg_list) == 1 and len(wild_list) == 0):\n",
-      "        query_args = 'AND {0}.{1} = '.format(arg_db, name_arg) + \"'\" + \", \".join(str(e) for e in arg_list) + \"'\"\n",
+      "        query_args = \"AND {}.{} = '{}'\".format(arg_db, name_arg, ', '.join(str(e) for e in arg_list))\n",
       "    # if there are more than one user arguments\n",
       "    elif (len(arg_list) > 1 and len(wild_list) == 0):\n",
-      "        conditions = ['{0}.{1} = '.format(arg_db, name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
-      "        query_args = \"AND (\" + \" OR \".join(map(str, conditions)) + \")\"\n",
+      "        query_args = \"AND ({})\".format(\" OR \".join(\"{}.{} = '{}'\".format(arg_db, name_arg, s) for s in arg_list))\n",
       "    # if there is only one wildcard\n",
       "    elif (len(wild_list) == 1 and len(arg_list) == 0):\n",
-      "        query_args = 'AND {0}.{1} LIKE '.format(arg_db, name_arg) + \"'\" + \", \".join(str(e) for e in wild_list) + \"'\"\n",
+      "         query_args = \"AND {}.{} LIKE '{}'\".format(arg_db, name_arg, ', '.join(str(e) for e in wild_list))\n",
       "    # if there are more than one wildcards\n",
       "    elif (len(wild_list) > 1 and len(arg_list) == 0):\n",
-      "        conditions = ['{0}.{1} LIKE '.format(arg_db, name_arg) + \"'\" + s + \"'\" for s in wild_list]\n",
-      "        query_args = \"AND (\" + \" OR \".join(map(str, conditions)) + \")\"\n",
+      "        query_args = \"AND ({})\".format(\" OR \".join(\"{}.{} LIKE '{}'\".format(arg_db, name_arg, s) for s in wild_list))\n",
       "    # if there are more than one wildcard and more than one user arg\n",
       "    elif (len(arg_list) > 1 and len(wild_list) > 1):\n",
-      "        reg_conditions = ['{0}.{1} = '.format(arg_db, name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
-      "        reg_args = \"AND ((\" + \" OR \".join(map(str, reg_conditions)) + \")\"\n",
-      "        wild_conditions = ['{0}.{1} LIKE '.format(arg_db, name_arg) + \"'\" + s + \"'\" for s in wild_list]\n",
-      "        wild_args = \"AND (\" + \" OR \".join(map(str, wild_conditions)) + \")\"\n",
+      "        reg_args = \"AND ({})\".format(\" OR \".join(\"{}.{} = '{}'\".format(arg_db, name_arg, s) for s in arg_list))\n",
+      "        wild_args = \"AND ({})\".format(\" OR \".join(\"{}.{} LIKE '{}'\".format(arg_db, name_arg, s) for s in wild_list))\n",
       "        query_args = (reg_args + \" \" + wild_args).replace(' AND ', ' OR ', 2) + \")\"\n",
       "    # if there is one of each\n",
       "    elif (len(arg_list) == 1 and len(wild_list) == 1):\n",
-      "        reg_conditions = ['{0}.{1} = '.format(arg_db, name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
-      "        reg_args = \"AND (\" + \" OR \".join(map(str, reg_conditions)) + \")\"\n",
-      "        wild_conditions = ['{0}.{1} LIKE '.format(arg_db, name_arg) + \"'\" + s + \"'\" for s in wild_list]\n",
-      "        wild_args = \"AND (\" + \" OR \".join(map(str, wild_conditions)) + \")\"\n",
+      "        reg_args = \"AND {}.{} = '{}'\".format(arg_db, name_arg, ', '.join(str(e) for e in arg_list))\n",
+      "        wild_args = \"AND {}.{} LIKE '{}'\".format(arg_db, name_arg, ', '.join(str(e) for e in wild_list))\n",
       "        query_args = (reg_args + \" \" + wild_args).replace(') AND (', ' OR ', 1)\n",
       "    else:\n",
       "        print \"Length of arg_list = \" + str(len(arg_list))\n",
@@ -430,7 +424,7 @@
       "    return arg_query"
      ],
      "language": "python",
-     "prompt_number": 100
+     "prompt_number": 177
     },
     {
      "cell_type": "heading",
@@ -444,15 +438,7 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "WHERE ((public_hg19.ensembl_genes.gene_name = 'BRCA1' OR public_hg19.ensembl_genes.gene_name = 'TRT1') OR (public_hg19.ensembl_genes.gene_name LIKE 'SON%' OR public_hg19.ensembl_genes.gene_name LIKE 'HOX%')) AND p7_platform.wgs_comgen_variant.gt = 'hom' AND p7_platform.wgs_comgen_variant.chrom = '8'\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "# assign user args to a variable\n",
       "locals().update(args)\n",
@@ -477,7 +463,7 @@
       "\n",
       "# merge query arguments\n",
       "def merge_query(query_arg):\n",
-      "    if len(query_arg) > 0:\n",
+      "    if query_arg:\n",
       "        final_query.append(query_arg)\n",
       " \n",
       "# create list to apply function on   \n",
@@ -491,7 +477,7 @@
       "impala_query= ' '.join(final_query).replace('AND', 'WHERE', 1)"
      ],
      "language": "python",
-     "prompt_number": 101
+     "prompt_number": 178
     },
     {
      "cell_type": "heading",
@@ -510,20 +496,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "match on start/stop\n"
+        "SELECT p7_platform.wgs_comgen_variant.*, public_hg19.ensembl_genes.gene_name FROM p7_platform.wgs_comgen_variant LEFT JOIN public_hg19.ensembl_genes USING (start,stop) WHERE (p7_platform.wgs_comgen_variant.start >= public_hg19.ensembl_genes.start AND p7_platform.wgs_comgen_variant.stop <= public_hg19.ensembl_genes.stop) AND ((public_hg19.ensembl_genes.gene_name = 'BRCA1' OR public_hg19.ensembl_genes.gene_name = 'TRT1') OR (public_hg19.ensembl_genes.gene_name LIKE 'SON%' OR public_hg19.ensembl_genes.gene_name LIKE 'HOX%')) AND p7_platform.wgs_comgen_variant.gt = 'hom' AND p7_platform.wgs_comgen_variant.chrom = '8'\n"
        ]
       }
      ],
      "input": [
-      "# using cgi and ensembl as models since they have a start and stop pos\n",
-      "\n",
       "# function to create list of columns to return\n",
       "def get_cols(db, col_arg):\n",
       "    if col_arg == 'all':\n",
       "        col_query = '{0}.*'.format(db)\n",
       "    else:\n",
       "        col_list = col_arg.replace(\"'\", \"\").split(',')\n",
-      "        if len(col_list) > 1:\n",
+      "        if col_list:\n",
       "            for col in col_list:\n",
       "                cols = [\"{0}.\".format(db) + s for s in col_list]\n",
       "                col_query = \",\".join(map(str, cols))\n",
@@ -538,7 +522,8 @@
       "col_statement = get_cols(search_db, search_db_cols) + \", \" + get_cols(annot_db, annot_db_cols)\n",
       "\n",
       "# write beginning of query\n",
-      "query_start = \"SELECT \" + col_statement + \" FROM {0},{1} {2}\".format(search_db, annot_db, impala_query)\n",
+      "inner_start = \"SELECT {} FROM {}, {} \".format(col_statement, search_db, annot_db)\n",
+      "left_start = \"SELECT {} FROM {} LEFT JOIN {} \".format(col_statement, search_db, annot_db)\n",
       "\n",
       "# check if tables contain start/stop or pos, and ref columns\n",
       "def get_colnames(cursor, table_name, print_out=True):\n",
@@ -553,59 +538,139 @@
       "annot_cols = get_colnames(cur, annot_db, print_out=True)\n",
       "platform_cols = get_colnames(cur, search_db, print_out=True)\n",
       "\n",
-      "# check for ref, start/stop or pos columns \n",
-      "# check for start  or pos\n",
-      "def classify_annot_db(annot_db):\n",
+      "# function to match cgi with annot_db\n",
+      "def join_annot_to_cgi(annot_db):\n",
       "    # check for ref columns\n",
       "    if 'ref' in annot_cols:\n",
       "        # if there is a start column \n",
       "        if 'start' in annot_cols:\n",
       "            # if there is a stop position reported\n",
       "            if 'stop' in annot_cols:\n",
-      "                print 'match on start/stop/ref'\n",
+      "                using_statement = \"USING (start,stop,ref,alt)\"\n",
+      "                match_statement = \" AND {0}.start = {1}.start AND {0}.stop = {1}.stop AND {0}.ref = {1}.ref AND { \\\n",
+      "                                  0}.alt = {1}.alt \".format(search_db, annot_db)\n",
       "            # there is start but no stop position\n",
       "            else:\n",
-      "                print 'match on start/ref'\n",
+      "                using_statement = \"USING (start,ref,alt)\"\n",
+      "                match_statement = \" AND {0}.start = {1}.start AND {0}.ref = {1}.ref AND { \\\n",
+      "                                  0}.alt = {1}.alt \".format(search_db, annot_db)\n",
       "        # there is pos column instead of start\n",
       "        elif 'pos' in annot_cols:\n",
-      "            print 'match on pos/ref'\n",
+      "            using_statement = \"USING (pos,ref,alt)\"\n",
+      "            match_statement = \" AND ({1}.pos BETWEEN {0}.start AND {0}.stop) AND {0}.ref = {1}.ref \\\n",
+      "            AND {0}.alt = {1}.alt \".format(search_db, annot_db)\n",
       "    elif 'ref' not in annot_cols:\n",
       "        # if there is a start column \n",
       "        if 'start' in annot_cols:\n",
       "            # if there is a stop position reported\n",
       "            if 'stop' in annot_cols:\n",
-      "                print 'match on start/stop'\n",
+      "                using_statement = \"USING (start,stop)\"\n",
+      "                match_statement = \" AND ({0}.start >= {1}.start AND {0}.stop <= {1}.stop) \".format(search_db, annot_db)\n",
       "            # there is start but no stop position\n",
       "            else:\n",
-      "                print 'match on start only'\n",
+      "                using_statement = \"USING (start)\"\n",
+      "                match_statement = \" AND {0}.start = {1}.start \".format(search_db, annot_db)\n",
       "        # there is pos column instead of start\n",
       "        elif 'pos' in annot_cols:\n",
-      "            print 'match on pos only'\n",
+      "            using_statement = \"USING (pos)\"\n",
+      "            match_statement = \" AND ({1}.pos BETWEEN {0}.start AND {0}.stop) \".format(search_db, annot_db)\n",
       "    # if no start, stop or pos, match on gene name\n",
       "    elif 'gene_name' in annot_cols:\n",
-      "        print \"match on gene name only\"\n",
+      "        using_statement = \"USING (gene_name)\"\n",
+      "        match_statement = \" AND {0}.gene_name = {1}.gene_name \".format(search_db, annot_db)\n",
       "    else:\n",
       "        print \"Cannot find method for joining tables.\"\n",
+      "    return using_statement,match_statement\n",
       "\n",
+      "# function to match illumina with annot_db\n",
+      "def join_annot_to_illumina(annot_db):\n",
+      "    # check for ref columns\n",
+      "    if 'ref' in annot_cols:\n",
+      "        # if there is a start column \n",
+      "        if 'start' in annot_cols:\n",
+      "            # if there is a stop position reported\n",
+      "            if 'stop' in annot_cols:\n",
+      "                using_statement = \"USING (start,stop,ref,alt)\"\n",
+      "                match_statement = \" AND ({0}.pos BETWEEN {1}.start AND {1}.stop) AND {0}.ref = {1}.ref \\\n",
+      "                                  AND {0}.alt = {1}.alt \".format(search_db, annot_db)\n",
+      "            # there is start but no stop position\n",
+      "            else:\n",
+      "                using_statement = \"USING (start,ref,alt)\"\n",
+      "                match_statement = \" AND {0}.pos = {1}.start AND {0}.ref = {1}.ref AND { \\\n",
+      "                                  0}.alt = {1}.alt \".format(search_db, annot_db)\n",
+      "        # there is pos column instead of start\n",
+      "        elif 'pos' in annot_cols:\n",
+      "            using_statement = \"USING (pos,ref,alt)\"\n",
+      "            match_statement = \" AND {0}.pos = {1}.pos AND {0}.ref = {1}.ref \\\n",
+      "            AND {0}.alt = {1}.alt \".format(search_db, annot_db)\n",
+      "    elif 'ref' not in annot_cols:\n",
+      "        # if there is a start column \n",
+      "        if 'start' in annot_cols:\n",
+      "            # if there is a stop position reported\n",
+      "            if 'stop' in annot_cols:\n",
+      "                using_statement = \"USING (start,stop)\"\n",
+      "                match_statement = \" AND ({0}.pos BETWEEN {1}.start AND {1}.stop) \".format(search_db,annot_db)\n",
+      "            # there is start but no stop position\n",
+      "            else:\n",
+      "                using_statement = \"\"\n",
+      "                match_statement = \" AND {0}.pos = {1}.start \".format(search_db, annot_db)\n",
+      "        # there is pos column instead of start\n",
+      "        elif 'pos' in annot_cols:\n",
+      "            using_statement = \"USING (pos)\"\n",
+      "            match_statement = \" AND {0}.pos = {1}.pos \".format(search_db, annot_db)\n",
+      "    # if no start, stop or pos, match on gene name\n",
+      "    elif 'gene_name' in annot_cols:\n",
+      "        using_statement = \"USING (gene_name)\"\n",
+      "        match_statement = \" AND {0}.gene_name = {1}.gene_name \".format(search_db, annot_db)\n",
+      "    else:\n",
+      "        print \"Cannot find method for joining tables.\"\n",
+      "        using_statement = \"\" \n",
+      "        match_statement = \"\"\n",
+      "    return using_statement, match_statement\n",
       "\n",
-      "classify_annot_db(annot_db)\n",
+      "if platform == 'cgi':\n",
+      "    using_match, table_match= join_annot_to_cgi(annot_db)\n",
+      "elif platform == 'illumina':\n",
+      "    using_match, table_match= join_annot_to_illumina(annot_db)\n",
+      "else:\n",
+      "    \"Check your arguments for search_db, annot_db and platform.\"\n",
       "\n",
-      "# elif platform == \"illumina\":\n",
-      "#     print 'illumina'\n",
-      "# else:\n",
-      "#     print \"Check that your platform argument is either 'cgi' or 'illumina' and try again.\"\n",
-      "    \n",
-      "# for cgi\n",
-      "# if start and stop, match on col/start/stop then check for ref/alt\n",
-      "# if pos, then between cgi.start and cgi.stop and chrom, check for ref/alt\n",
-      "# if no start, stop or pos, check for gene and match on that \n",
+      "if query_type == 'annot':\n",
+      "    query_join = left_start + using_match + table_match.replace('AND', \"WHERE\", 1) + \\\n",
+      "                impala_query.replace(\"WHERE\", \"AND\", 1)\n",
+      "if query_type == 'filter':\n",
+      "    query_join = inner_start + impala_query + table_match\n",
       "\n",
-      "\n",
-      "\n",
-      "# either left join or inner join"
+      "print query_join"
      ],
      "language": "python",
-     "prompt_number": 169
+     "prompt_number": 238
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Run Query on impala"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Save Results"
+     ]
     },
     {
      "cell_type": "code",
@@ -628,7 +693,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- figure out how to automatically join tables (left or inner)\n",
       "- save as file,table or both\n",
       "- Upload text file instead of arg"
      ]
