added function to join query, need to save results and create __main__ module

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -26,11 +26,18 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To search for all variables in a field without restrictions, use 'all' as your argument, otherwise: "
+     ]
+    },
+    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
      "source": [
-      "'member'"
+      "'members'"
      ]
     },
     {
@@ -62,6 +69,19 @@
      ]
     },
     {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args = {\n",
+      "    'members':'%M,%F,%NB'\n",
+      "}"
+     ],
+     "language": "python",
+     "prompt_number": 255
+    },
+    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
@@ -86,6 +106,17 @@
      ]
     },
     {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['subject_id'] = 'all'"
+     ],
+     "language": "python",
+     "prompt_number": 256
+    },
+    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
@@ -104,6 +135,17 @@
       "Example:  \n",
       "'genes':'HOX%,TRT1'"
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['genes'] = 'BRCA1,TRT1,SON%,HOX%'"
+     ],
+     "language": "python",
+     "prompt_number": 257
     },
     {
      "cell_type": "heading",
@@ -138,6 +180,17 @@
      ]
     },
     {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['gt'] = 'hom'"
+     ],
+     "language": "python",
+     "prompt_number": 258
+    },
+    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
@@ -157,6 +210,17 @@
      ]
     },
     {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['chrom'] = '8'"
+     ],
+     "language": "python",
+     "prompt_number": 259
+    },
+    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
@@ -173,6 +237,17 @@
       "'platform':'cgi'  \n",
       "'platform':'illumina'  "
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['platform'] = 'cgi'"
+     ],
+     "language": "python",
+     "prompt_number": 260
     },
     {
      "cell_type": "heading",
@@ -225,7 +300,18 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 174
+     "prompt_number": 261
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['search_db'] = 'p7_platform.wgs_comgen_variant'"
+     ],
+     "language": "python",
+     "prompt_number": 262
     },
     {
      "cell_type": "heading",
@@ -245,6 +331,17 @@
       "'search_ db _ cols':''chrom,start,stop,ref,alt,subject_id'  \n",
       "'search_ db _ cols':'all\"\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['search_db_cols'] = 'all'"
+     ],
+     "language": "python",
+     "prompt_number": 263
     },
     {
      "cell_type": "heading",
@@ -288,7 +385,18 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 175
+     "prompt_number": 264
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['annot_db'] = 'public_hg19.ensembl_genes'"
+     ],
+     "language": "python",
+     "prompt_number": 265
     },
     {
      "cell_type": "heading",
@@ -308,6 +416,17 @@
       "'annot_ db_ cols':''gene_name'  \n",
       "'annot_ db_ cols':'all\""
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['annot_db_cols'] = 'gene_name'"
+     ],
+     "language": "python",
+     "prompt_number": 266
     },
     {
      "cell_type": "heading",
@@ -336,22 +455,40 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "args = {\n",
-      "    'members':'all',\n",
-      "    'subject_id':'all',\n",
-      "    'genes':'BRCA1,TRT1,SON%,HOX%',\n",
-      "    'gt':'hom',\n",
-      "    'chrom':'8',\n",
-      "    'platform': 'cgi',\n",
-      "    'search_db':'p7_platform.wgs_comgen_variant',\n",
-      "    'search_db_cols':'all',\n",
-      "    'annot_db':'public_hg19.ensembl_genes',\n",
-      "    'annot_db_cols':'gene_name',\n",
-      "    'query_type':'annot'\n",
-      "}"
+      "args['query_type'] = 'annot'"
      ],
      "language": "python",
-     "prompt_number": 176
+     "prompt_number": 267
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "'output'"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Results of your query are automatically downloaded into a pandas table. If you would also like to save your output to impala as a table or as a tsv file, select from the following options. \n",
+      "\n",
+      "Options:  \n",
+      "'output':'tsv'  \n",
+      "'output':'impala_table'  "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "args['output'] = 'tsv'"
+     ],
+     "language": "python",
+     "prompt_number": 273
     },
     {
      "cell_type": "heading",
@@ -424,7 +561,7 @@
       "    return arg_query"
      ],
      "language": "python",
-     "prompt_number": 177
+     "prompt_number": 268
     },
     {
      "cell_type": "heading",
@@ -477,7 +614,7 @@
       "impala_query= ' '.join(final_query).replace('AND', 'WHERE', 1)"
      ],
      "language": "python",
-     "prompt_number": 178
+     "prompt_number": 284
     },
     {
      "cell_type": "heading",
@@ -491,15 +628,7 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "SELECT p7_platform.wgs_comgen_variant.*, public_hg19.ensembl_genes.gene_name FROM p7_platform.wgs_comgen_variant LEFT JOIN public_hg19.ensembl_genes USING (start,stop) WHERE (p7_platform.wgs_comgen_variant.start >= public_hg19.ensembl_genes.start AND p7_platform.wgs_comgen_variant.stop <= public_hg19.ensembl_genes.stop) AND ((public_hg19.ensembl_genes.gene_name = 'BRCA1' OR public_hg19.ensembl_genes.gene_name = 'TRT1') OR (public_hg19.ensembl_genes.gene_name LIKE 'SON%' OR public_hg19.ensembl_genes.gene_name LIKE 'HOX%')) AND p7_platform.wgs_comgen_variant.gt = 'hom' AND p7_platform.wgs_comgen_variant.chrom = '8'\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "# function to create list of columns to return\n",
       "def get_cols(db, col_arg):\n",
@@ -635,16 +764,15 @@
       "else:\n",
       "    \"Check your arguments for search_db, annot_db and platform.\"\n",
       "\n",
+      "# create innor or left join query\n",
       "if query_type == 'annot':\n",
-      "    query_join = left_start + using_match + table_match.replace('AND', \"WHERE\", 1) + \\\n",
+      "    query_and_join = left_start + using_match + table_match.replace('AND', \"WHERE\", 1) + \\\n",
       "                impala_query.replace(\"WHERE\", \"AND\", 1)\n",
       "if query_type == 'filter':\n",
-      "    query_join = inner_start + impala_query + table_match\n",
-      "\n",
-      "print query_join"
+      "    query_and_join = inner_start + impala_query + table_match"
      ],
      "language": "python",
-     "prompt_number": 238
+     "prompt_number": 270
     },
     {
      "cell_type": "heading",
@@ -658,11 +786,38 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "save as tsv\n"
+       ]
+      }
      ],
-     "language": "python"
+     "input": [
+      "from impala.util import as_pandas\n",
+      "# execute query\n",
+      "# cur.execute(query_and_join)\n",
+      "# \n",
+      "# # store results as pandas table\n",
+      "# query_results = as_pandas(cur)\n",
+      "\n",
+      "\n",
+      "test_query = \"SELECT * FROM public_hg19.clinvar LIMIT 5\"\n",
+      "cur.execute(test_query)\n",
+      "test_results = as_pandas(cur)\n",
+      "\n",
+      "if output == 'tsv':\n",
+      "    print \"save as tsv\"\n",
+      "elif output == 'impala_table':\n",
+      "    print \"save as impala table\"\n",
+      "else:\n",
+      "    \"Check your argument for 'output' and try again.\"\n",
+      "\n"
+     ],
+     "language": "python",
+     "prompt_number": 286
     },
     {
      "cell_type": "heading",
@@ -694,7 +849,8 @@
      "metadata": {},
      "source": [
       "- save as file,table or both\n",
-      "- Upload text file instead of arg"
+      "- Upload text file instead of arg\n",
+      "- Add additional filters/annotations such as kaviar pct"
      ]
     },
     {
