saved as tsv, need to save as hdfs table

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -72,14 +72,22 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'members': '%M,%F,%NB'}\n"
+       ]
+      }
+     ],
      "input": [
       "args = {\n",
       "    'members':'%M,%F,%NB'\n",
       "}"
      ],
      "language": "python",
-     "prompt_number": 255
+     "prompt_number": 31
     },
     {
      "cell_type": "heading",
@@ -114,7 +122,7 @@
       "args['subject_id'] = 'all'"
      ],
      "language": "python",
-     "prompt_number": 256
+     "prompt_number": 33
     },
     {
      "cell_type": "heading",
@@ -145,7 +153,7 @@
       "args['genes'] = 'BRCA1,TRT1,SON%,HOX%'"
      ],
      "language": "python",
-     "prompt_number": 257
+     "prompt_number": 38
     },
     {
      "cell_type": "heading",
@@ -183,12 +191,20 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'gt': 'hom', 'subject_id': 'all', 'genes': 'BRCA1,TRT1,SON%,HOX%', 'members': '%M,%F,%NB'}\n"
+       ]
+      }
+     ],
      "input": [
       "args['gt'] = 'hom'"
      ],
      "language": "python",
-     "prompt_number": 258
+     "prompt_number": 47
     },
     {
      "cell_type": "heading",
@@ -218,7 +234,7 @@
       "args['chrom'] = '8'"
      ],
      "language": "python",
-     "prompt_number": 259
+     "prompt_number": 50
     },
     {
      "cell_type": "heading",
@@ -247,7 +263,7 @@
       "args['platform'] = 'cgi'"
      ],
      "language": "python",
-     "prompt_number": 260
+     "prompt_number": 55
     },
     {
      "cell_type": "heading",
@@ -300,7 +316,7 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 261
+     "prompt_number": 62
     },
     {
      "cell_type": "code",
@@ -311,7 +327,7 @@
       "args['search_db'] = 'p7_platform.wgs_comgen_variant'"
      ],
      "language": "python",
-     "prompt_number": 262
+     "prompt_number": 63
     },
     {
      "cell_type": "heading",
@@ -385,7 +401,7 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 264
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
@@ -426,7 +442,7 @@
       "args['annot_db_cols'] = 'gene_name'"
      ],
      "language": "python",
-     "prompt_number": 266
+     "prompt_number": 67
     },
     {
      "cell_type": "heading",
@@ -488,7 +504,7 @@
       "args['output'] = 'tsv'"
      ],
      "language": "python",
-     "prompt_number": 273
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -561,7 +577,7 @@
       "    return arg_query"
      ],
      "language": "python",
-     "prompt_number": 268
+     "prompt_number": 70
     },
     {
      "cell_type": "heading",
@@ -614,7 +630,7 @@
       "impala_query= ' '.join(final_query).replace('AND', 'WHERE', 1)"
      ],
      "language": "python",
-     "prompt_number": 284
+     "prompt_number": 71
     },
     {
      "cell_type": "heading",
@@ -791,11 +807,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "save as tsv\n"
+        "Saving results to a tsv file as /Users/summerrae/impala_scripts/query_results_072715.tsv\n"
        ]
       }
      ],
      "input": [
+      "import os\n",
+      "import datetime\n",
+      "\n",
       "from impala.util import as_pandas\n",
       "# execute query\n",
       "# cur.execute(query_and_join)\n",
@@ -806,18 +825,20 @@
       "\n",
       "test_query = \"SELECT * FROM public_hg19.clinvar LIMIT 5\"\n",
       "cur.execute(test_query)\n",
-      "test_results = as_pandas(cur)\n",
+      "query_results = as_pandas(cur)\n",
       "\n",
       "if output == 'tsv':\n",
-      "    print \"save as tsv\"\n",
+      "    print \"Saving results to a tsv file as {}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\")))\n",
+      "    query_results.to_csv(\"{}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\"))), sep='\\t', index=False)\n",
       "elif output == 'impala_table':\n",
       "    print \"save as impala table\"\n",
-      "else:\n",
-      "    \"Check your argument for 'output' and try again.\"\n",
-      "\n"
+      "elif output == 'both':\n",
+      "    print \"both\"\n",
+      "else: \n",
+      "    print \"Check your argument for 'output' and try again.\""
      ],
      "language": "python",
-     "prompt_number": 286
+     "prompt_number": 80
     },
     {
      "cell_type": "heading",
